# terra-backend

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.kiro/: prompts.md
.kiro/hooks/: new-tool-checklist.md  post-edit-tests.md  pre-commit.md
.kiro/mcp/: README.md  servers.json
.kiro/skills/: add-migration.md  deploy.md  lint-and-type.md  run-tests.md
.kiro/specs/: add-agent.md  add-tool.md  e2e-cycle.md  run-tests.md
.kiro/steering/: architecture.md  conventions.md  project.md
docs/: api.md  architecture.md  configuration.md  deployment.md  extending.md  static_kb.md  testing.md
src/terra/: __init__.py  app.py  config.py  main.py  setup.py
src/terra/agents/: __init__.py  base.py  job_listings.py  registry.py  search_agent.py  static_kb_agent.py
src/terra/api/: deps.py  router.py
src/terra/api/v1/: router.py
src/terra/api/v1/endpoints/: agents.py  auth.py  chatbot.py  documents.py  health.py  mcp.py
src/terra/db/: base.py  session.py
src/terra/db/migrations/: env.py
src/terra/evals/: __init__.py  base.py
src/terra/llm/: __init__.py  config.py  service.py  types.py
src/terra/mcp/: __init__.py  client.py  registry.py  schemas.py  service.py  tool_adapter.py
src/terra/memory/: __init__.py  base.py  db_store.py
src/terra/models/: __init__.py  document.py  memory.py  session.py  user.py
src/terra/orchestration/: __init__.py  hooks.py  runner.py
src/terra/prompts/: __init__.py  base.py
src/terra/schemas/: jobs.py  search.py
src/terra/scripts/: __init__.py  fetch_static_kb.py
src/terra/services/: __init__.py  auth.py  ba_jobs_client.py  chatbot.py  documents.py  static_kb.py
src/terra/services/search/: __init__.py  base.py  tavily.py
src/terra/tools/: __init__.py  ba_jobs.py  base.py  browser.py  custom_data.py  database.py  knowledge.py  registry.py  search.py  static_kb.py
tests/: conftest.py  test_agents.py  test_agents_api.py  test_auth.py  test_ba_jobs.py  test_chatbot.py  test_documents.py  test_health.py  test_llm.py  test_mcp.py  test_static_kb.py  test_tools.py  test_web_search.py
tests/fixtures/: static_kb_sample.json
